# ASIA

./: README.md
Nanodrone/: .gitignore  PROGRAM.md  README.md  drone_description.md  model.py  prepare.py  pyproject.toml  results.tsv  search_journal.md  test.py  train.py
Nanodrone/bayesian_search/: bayesian_search.py  best_config.json  compare_asia_vs_bayes.py  results.tsv
Nanodrone/cached_data/: config_params_general.pkl  metadata.json
Nanodrone/cached_data/test_sequences/: melon.npz
Nanodrone/cached_data/train_sequences/: chirp.npz  random.npz  square.npz
Nanodrone/checkpoints/: cross_validation_summary.json
Nanodrone/checkpoints/best_so_far/: cross_validation_summary.json
Nanodrone/final_analysis/: best_test_metrics.json  compare_rs_vs_ar.py  final_analysis.py  grouped_mae.json  grouped_mae.py  paper_metrics.py  stride1_test_metrics.json  trajectory_50step_metrics.json  trajectory_plots.py  trajectory_stride1_metrics.json
Nanodrone/random_search/: best_config.json  compare_rs_vs_ar.py  model.py  random_search.py  results.tsv  rs_train.py  summary.md
Two_Tanks/: .gitignore  Cascaded_description.md  PROGRAM.md  README.md  model.py  prepare.py  pyproject.toml  results.tsv  search_journal.md  test.py  train.py
Two_Tanks/cached_data/: config_params_general.pkl  dataset_test.npz  metadata.json
Two_Tanks/checkpoints/: cross_validation_summary.json
Two_Tanks/final_analysis/: Benchmark Results.xlsx  README.md  analyze_best_test.py  best_test_metrics.json  plot_results.py
Two_Tanks/monte_carlo/: mc_results.tsv  plot_mc.py
(+108 files in other folders)
