[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanodrone-3fold-benchmark"
version = "0.1.0"
description = "Benchmark and training code for 3-fold cross-validation on nano-drone state prediction."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "torch",
]

[tool.setuptools]
py-modules = [
    "model",
    "prepare",
    "test",
    "train",
]
